[metadata]
name = mokuwiki
version = 2.0.0
description = Convert a folder of Markdown documents, replacing inter-page link and tag markup with Markdown links and lists
long_description = file:README.md, CHANGELOG.md
long_description_content_type = text/markdown
url = https://github.com/encodis/mokuwiki
author = Philip Hodder
author_email = philip.hodder@encodis.com
license = MIT
classifiers = 
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Topic :: Text Processing :: Markup
    Topic :: Utilities
keywords = markdown wiki converter

[options]
python_requires = >=3.7
install_requires = 
    pyyaml>=5.1
package_dir=
    =src
packages = find:

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    mokuwiki = mokuwiki.wiki:mokuwiki
    mwpage = mokuwiki.page:mwpage
    mwmeta = mokuwiki.page:mwmeta

[tool:pytest]
norecursedirs=tests/helpers

[bumpversion]
current_version = 2.0.0
commit = True
tag = True

[bumpversion:file:setup.cfg]

[flake8]
max-line-length = 120
exclude =
    build
    dist
    .eggs
